package Egametang;

enum ResponseType
{
	RESPONSE_TYPE_OK = 1;
	RESPONSE_TYPE_ERROR = 2;
}

message RpcRequest
{
	required int32 id = 1;
	required string method = 2;
	optional bytes request = 3;
}

message RpcResponse
{
	required int32 id = 1;
	required ResponseType type = 2;
	optional bytes error = 3;
	optional bytes response = 4;
}